tests/testFiles/semanticErrors/callvarasfunction.meme
ermahgerd a = 10;

a();
